# PDF-Dual-Translate-Viewer

./: .pre-commit-config.yaml  README.md  README_ko.md  main.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: custom-issue.md
src/adapters/controllers/: pdf_controller.py
src/adapters/gateways/: fitz_pdf_parser_gateway.py  google_translation_gateway.py  pdf_parser_gateway.py  translation_gateway.py
src/adapters/presenters/: pdf_presenter.py
src/common/: constants.py
src/core/use_cases/: pdf_page_service.py  pdf_parsing_service.py  settings_service.py  translation_service.py
src/infrastructure/dtos/: __init__.py  app_settings_dtos.py  highlight_update_info.py  image_view_data.py  page_display_view_model.py  pdf_view_dtos.py  segment_view_data.py
src/infrastructure/gateways/: google_translation_gateway.py  pdf_parser_gateway.py  translation_gateway.py
src/infrastructure/translation/: google_translate_async.py
src/ui/: main_window_view.py
src/ui/view/: main_window_view.py  settings_dialog.py
src/ui/widgets/: highlight_overlay.py  image_item.py  pdf_view_widget.py  text_segment_item.py
tests/: test_pdf_page_service.py  test_pdf_parsing_service.py  test_translation_service.py
